Archive2/e8/cae09f23fdbce2/output
main.cpp:7:5: error: static_assert failed ""
    static_assert(false, "");
    ^             ~~~~~
main.cpp:10:23: error: non-type template argument of type 'char *' is not a constant expression
template struct chars<new char>;
                      ^~~~~~~~
main.cpp:4:22: note: template parameter is declared here
template<const char* str>
                     ^
2 errors generated.
